--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-register></app-register>
-<app-register-second></app-register-second>
-<app-log-in></app-log-in>
+<!-- <app-register></app-register> -->
+<!-- <app-register-second></app-register-second> -->
+<!-- <app-log-in></app-log-in> -->
 <router-outlet></router-outlet>
