--- a/front/src/app/components/log-in/log-in.component.html
+++ b/front/src/app/components/log-in/log-in.component.html
@@ -24,7 +24,7 @@
       color="primary">Log In</button><br>
     <h3 class="text">Not registered yet? Register now:</h3>
     <button mat-raised-button
-      color="accent">Sign Up!</button>
+      color="accent" routerLink="register">Sign Up!</button>
 
   </form>
 </mat-card>
