--- a/front/src/app/components/register/register.component.css
+++ b/front/src/app/components/register/register.component.css
@@ -22,11 +22,13 @@ header h1 {
 }
 
 .container {
-  align-items: center;
+  /* align-items: center; */
+  display: flex;
+  justify-content: center;
   background-color: rgba(245, 202, 145, 0.92);
   width: 50%;
   border: 1px black ridge;
-  margin: auto;
+  margin: 0 auto;
 }
 
 mat-form-field {
@@ -44,7 +46,7 @@ mat-form-field {
   background-color: cadetblue;
   background-image: url("../../../assets/wallOfBricks.jpg");
   background-color: #cccccc;
-  /* height: 500px; */
+  height:100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
