working on registraion authentication

--- a/front/src/app/components/register-second/register-second.component.html
+++ b/front/src/app/components/register-second/register-second.component.html
@@ -33,7 +33,9 @@
         name="street">
     </mat-form-field>
 
-    <button mat-raised-button color="primary">Sign Up!</button>
+    <button mat-raised-button color="primary">Sign Up! &nbsp; &nbsp;
+      <mat-icon>person_add</mat-icon>
+    </button>
 
   </form>
 </mat-card>
