--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+
+<div class="container">
+  <div class="card"
+    *ngFor="let product of products">
+    <div class="cards-container">
+      <mat-card class="example-card">
+        <mat-card-title>{{product.name}}</mat-card-title>
+        <mat-card-content>
+          <p>{{product.price | currency}}</p>
+          <p>{{ product.imagePath }}</p>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions>
+          <button mat-button>ADD TO CART
+            <mat-icon>shopping_cart</mat-icon>
+          </button>
+        </mat-card-actions>
+        <mat-card-footer *ngIf="false">
+          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </mat-card-footer>
+      </mat-card>
+    </div>
+  </div>
+</div>
