--- a/front/src/app/components/log-in/log-in.component.html
+++ b/front/src/app/components/log-in/log-in.component.html
@@ -14,7 +14,6 @@
           name="userName">
       </mat-form-field>
 
-
       <mat-form-field appearance="outline" class="item">
         <mat-label>Password</mat-label>
         <input matInput ngModel
@@ -25,9 +24,9 @@
       <button mat-raised-button  class="item" (click)="handleLogInClick(logInForm.form.value)"
         color="primary">Log In</button><br>
       <h3 class="text">Not registered yet? Register now:</h3>
-      <button mat-raised-button  class="item"
-        color="accent"
-        routerLink="register">Sign Up!</button>
+      <button mat-raised-button class="item"
+        style="background-color:green"
+        routerLink="/register">Sign Up!</button>
 
     </form>
   </div>
