--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -20,7 +20,7 @@
 
     <mat-form-field appearance="outline">
       <mat-label>ID</mat-label>
-      <input matInput
+      <input matInput ngModel
         placeholder="ID"
         type="number"
         name="id" required>
@@ -28,7 +28,7 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput
+      <input matInput ngModel
         placeholder="Email"
         type="email"
         name="email" required>
@@ -36,20 +36,23 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
-      <input matInput
+      <input matInput ngModel
         placeholder="Password"
         name="password" required>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Confirm Password</mat-label>
-      <input matInput
-        placeholder="Confirm Password"
-        name="confirm-password" required>
-    </mat-form-field>
+    <!-- <label>Password</label>
+    <input id="psw-input" type="password" class="form-control">
+    <div id="pswmeter" class="mt-3"></div>
+    <div id="pswmeter-message" class="mt-3"></div>
+    <small class="form-text text-muted mt-3">Password you choose has to meet the following requirements: 1) At least one lowercase alfabetic character. 2) At least one uppercase alfabetic character. 3) At least one numeric character. 4) It's length has to be greater than 8 characters.</small> -->
 
     <button mat-raised-button
-      color="primary">Move To Part Two</button>
+      color="primary"
+      (click)="handleRegClick(registerOne.form.value)"
+      >Move To Part Two &nbsp; &nbsp;
+      <mat-icon>arrow_forward_ios</mat-icon>
+    </button>
 
   </form>
 </mat-card>
