--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-register></app-register> -->
 <!-- <app-register-second></app-register-second> -->
 <!-- <app-log-in></app-log-in> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
