--- a/front/src/app/components/home/home.component.css
+++ b/front/src/app/components/home/home.component.css
@@ -1,3 +1,20 @@
 .example-card {
   max-width: 400px;
 }
+
+img {
+  width: 80%;
+  height: 80%;
+}
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card{
+  max-width: 25%;
+  min-width: 250px;
+  /* border: 1px ridge; */
+  margin: 5px;
+}
