--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -5,10 +5,10 @@
     *ngFor="let product of products">
     <div class="cards-container">
       <mat-card class="example-card">
-        <mat-card-title>{{product.name}}</mat-card-title>
+        <mat-card-title class="product-image">{{product.name}}</mat-card-title>
         <mat-card-content>
           <p>{{product.price | currency}}</p>
-          <p>{{ product.imagePath }}</p>
+          <img [src]="product.imagePath" alt="Error loading picture"/>
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
@@ -22,4 +22,28 @@
       </mat-card>
     </div>
   </div>
+
+  <div class="card"
+  *ngFor="let product of productlist">
+  <div class="cards-container">
+    <mat-card class="example-card">
+      <mat-card-title class="product-image">{{product.name}}</mat-card-title>
+      <mat-card-content>
+        <p>{{product.price | currency}}</p>
+        <img [src]="product.imagePath" alt="Error loading picture"/>
+      </mat-card-content>
+      <mat-divider inset></mat-divider>
+      <mat-card-actions>
+        <button mat-button>ADD TO CART
+          <mat-icon>shopping_cart</mat-icon>
+        </button>
+      </mat-card-actions>
+      <mat-card-footer *ngIf="false">
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </mat-card-footer>
+    </mat-card>
+  </div>
+</div>
+
+
 </div>
