--- a/front/src/app/components/home/home.component.css
+++ b/front/src/app/components/home/home.component.css
@@ -1,20 +1,20 @@
-.example-card {
-  max-width: 400px;
-}
-
 img {
   width: 80%;
   height: 80%;
 }
 
-.container{
+.container {
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+  align-items: stretch;
+  object-fit: contain;
 }
 
-.card{
-  max-width: 25%;
-  min-width: 250px;
-  /* border: 1px ridge; */
+.card {
+  max-width: 20%;
+  min-width: 200px;
+  align-items: stretch;
   margin: 5px;
 }
