--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <!-- <app-navbar></app-navbar> -->
 
-<div class="container">
+<div class="container"
+fxLayoutAlign="start start">
   <div class="card"
     *ngFor="let product of products">
     <div class="cards-container">
