--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,16 @@
   <mat-toolbar-row>
     <span>My Shop</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+    (click)="handleHomeClick()"
+    >
       <mat-icon>home</mat-icon>
+    </button>
+
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+(click)="handleCartBtnClick()"
+    >
       <mat-icon>shopping_cart</mat-icon>
     </button>
   </mat-toolbar-row>
