working on cart

--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -46,5 +46,13 @@ fxLayoutAlign="start start">
   </div>
 </div>
 
+<!-- <button mat-raised-button color="primary"></button> -->
+
+
+
+<div class="cart-component">
+  <app-cart ></app-cart>
+</div>
+
 
 </div>
