--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -3,15 +3,18 @@
     <span>My Shop</span>
     <span class="example-spacer"></span>
 
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-    (click)="handleHomeClick()"
-    >
+    <button mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with menu icon"
+      (click)="handleHomeClick()">
       <mat-icon>home</mat-icon>
     </button>
 
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-(click)="handleCartBtnClick()"
-    >
+    <button mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with menu icon"
+      (click)="handleCartBtnClick()">
       <mat-icon>shopping_cart</mat-icon>
     </button>
+    
   </mat-toolbar-row>
