--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,58 +1,22 @@
-<!-- <app-navbar></app-navbar> -->
-
 <div class="container"
-fxLayoutAlign="start start">
+  fxLayoutAlign="start start">
+
   <div class="card"
     *ngFor="let product of products">
     <div class="cards-container">
-      <mat-card class="example-card">
-        <mat-card-title class="product-image">{{product.name}}</mat-card-title>
-        <mat-card-content>
-          <p>{{product.price | currency}}</p>
-          <img [src]="product.imagePath" alt="Error loading picture"/>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>ADD TO CART
-            <mat-icon>shopping_cart</mat-icon>
-          </button>
-        </mat-card-actions>
-        <mat-card-footer *ngIf="false">
-          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-        </mat-card-footer>
-      </mat-card>
+      <app-item [product]="product"></app-item>
     </div>
   </div>
 
   <div class="card"
-  *ngFor="let product of productlist">
-  <div class="cards-container">
-    <mat-card class="example-card">
-      <mat-card-title class="product-image">{{product.name}}</mat-card-title>
-      <mat-card-content>
-        <p>{{product.price | currency}}</p>
-        <img [src]="product.imagePath" alt="Error loading picture"/>
-      </mat-card-content>
-      <mat-divider inset></mat-divider>
-      <mat-card-actions>
-        <button mat-button>ADD TO CART
-          <mat-icon>shopping_cart</mat-icon>
-        </button>
-      </mat-card-actions>
-      <mat-card-footer *ngIf="false">
-        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-      </mat-card-footer>
-    </mat-card>
+    *ngFor="let product of productlist">
+    <div class="cards-container">
+      <app-item [product]="product"></app-item>
+    </div>
   </div>
-</div>
 
-<!-- <button mat-raised-button color="primary"></button> -->
-
-
-
-<div class="cart-component">
-  <app-cart ></app-cart>
-</div>
-
+  <div class="cart-component">
+    <app-cart></app-cart>
+  </div>
 
 </div>
