--- a/front/src/app/components/home/home.component.css
+++ b/front/src/app/components/home/home.component.css
@@ -5,11 +5,12 @@ img {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
+  flex-direction: row;
   margin: auto;
-  justify-content: center;
+  /* justify-content: center;
   align-items: stretch;
-  object-fit: contain;
+  object-fit: contain; */
 }
 
 .card {
@@ -17,4 +18,17 @@ img {
   min-width: 200px;
   align-items: stretch;
   margin: 5px;
+}
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+  align-items: stretch;
+  object-fit: contain;
+}
+
+.cart-component{
+  /* max-width: fit-content+300px; */
 }
