--- a/front/src/app/components/item/item.component.css
+++ b/front/src/app/components/item/item.component.css
@@ -18,3 +18,13 @@ img {
   align-items: stretch;
   margin: 5px;
 }
+
+.amount-field{
+  width:35%;
+}
+
+.footer{
+  width: 100%;
+  display:flex;
+  flex-direction: row;
+}
