--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,22 +1,25 @@
 <div class="container"
   fxLayoutAlign="start start">
+  <div class="cards">
+    <div class="card"
+      *ngFor="let product of products">
+      <div class="cards-container">
+        <app-item [product]="product"></app-item>
+      </div>
+    </div>
 
-  <div class="card"
-    *ngFor="let product of products">
-    <div class="cards-container">
-      <app-item [product]="product"></app-item>
+    <div class="card"
+      *ngFor="let product of productlist">
+      <div class="cards-container">
+        <app-item [product]="product"></app-item>
+      </div>
     </div>
   </div>
 
-  <div class="card"
-    *ngFor="let product of productlist">
-    <div class="cards-container">
-      <app-item [product]="product"></app-item>
-    </div>
-  </div>
-
+  <!-- (newItemEvent)="addItem($event)" -->
   <div class="cart-component">
-    <app-cart></app-cart>
+    <app-cart [justForRender]="forReRender"
+    ></app-cart>
   </div>
 
 </div>
