--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -8,12 +8,12 @@
       </div>
     </div>
 
-    <div class="card"
+    <!-- <div class="card"
       *ngFor="let product of productlist">
       <div class="cards-container">
         <app-item [product]="product"></app-item>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <!-- (newItemEvent)="addItem($event)" -->
