--- a/front/src/app/components/cart/cart.component.css
+++ b/front/src/app/components/cart/cart.component.css
@@ -1,11 +1,15 @@
 .container{
   min-height: 100vh;
   min-width:200px;
-  border: 1px red ridge;
-  border-radius: 5px;
   display: flex;
   flex-direction: column;
   text-align: center;
+
+  background: url('../../../assets/reka-1.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 th, td {
