--- a/front/src/app/components/order/order.component.css
+++ b/front/src/app/components/order/order.component.css
@@ -1,19 +1,30 @@
-.register-form {
-  background-color: rgba(134, 77, 227, 0.92);
-  opacity: 1;
-  background-image: url(../../../assets/whiteWall.jpg);
-  border: 1px black ridge;
-  margin: auto;
+.order-page {
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  min-width: 20%;
-  max-width: 50%;
-  margin-top: 5%;
-  padding: 5%;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 87vh;
+  background-color: blue;
+  background-image: url('https://res.cloudinary.com/yuda801/image/upload/v1657804327/bag_rsns6x.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.item{
-  width:fit-content;
+.register-form {
+  width: max-content;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.mat-card{
+  height: fit-content;
+  margin: auto;
+  background-color:aliceblue;
+}
+
+.item {
   align-self: center;
 }
 
@@ -21,14 +32,13 @@ header h1 {
   text-align: center;
 }
 
-.container {
-  height: 100vh;
-  background-color: blue;
-  background-image: url("../../../assets/wallOfBricks.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: block;
+.order-container {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 70vh;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
 }
 
 h3 {
@@ -38,4 +48,10 @@ h3 {
 
 .text {
   text-align: center;
+}
+
+
+th,
+td {
+  border: 1px solid black;
 }
