fixed some issues

--- a/front/src/app/components/order/order.component.html
+++ b/front/src/app/components/order/order.component.html
@@ -63,7 +63,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Date</mat-label>
+      <mat-label>Recieving Date</mat-label>
       <input matInput
         ngModel
         placeholder="1-1-2020"
@@ -72,10 +72,10 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Credit-Card</mat-label>
+      <mat-label>4-Digit Credit-Card</mat-label>
       <input matInput
         ngModel
-        placeholder="0000-0000-0000"
+        placeholder="0000"
         name="creditCard"
         required>
     </mat-form-field>
