--- a/front/src/app/components/item/item.component.html
+++ b/front/src/app/components/item/item.component.html
@@ -18,8 +18,8 @@
     </mat-form-field>
     <mat-card-actions>
       <button mat-button
-        (click)="handleAddBtn()">ADD TO CART
-        <mat-icon>shopping_cart</mat-icon>
+        (click)="handleAddBtn()">
+        <mat-icon>add_shopping_cart</mat-icon>ADD TO CART
       </button>
     </mat-card-actions>
   </div>
